--- a/src/recipes/templates/recipes/home.html
+++ b/src/recipes/templates/recipes/home.html
@@ -25,17 +25,17 @@
             Discover, create, and share your favorite recipes
         </p>
         <!-- <a href="{% url 'recipes:recipe-list' %}"
-            class="inline-block px-8 py-4 text-lg font-bold text-white rounded-lg shadow-lg transition-all duration-300 bg-accent-400 hover:bg-accent-50 hover:scale-105 hover:bg-accent-600">
+            class="inline-block px-8 py-4 text-lg font-bold text-white rounded-lg shadow-lg transition-all duration-300 bg-accent-400 hover:scale-105 hover:bg-accent-600">
             Explore Recipes
         </a> -->
         {% if user.is_authenticated %}
         <div class="flex flex-col gap-4 justify-center sm:flex-row">
             <a href="{% url 'recipes:recipe-list' %}"
-                class="px-8 py-4 text-lg font-bold text-white rounded-lg shadow-lg transition-all duration-300 bg-accent-400 hover:bg-accent-50 hover:scale-105 hover:bg-accent-600">
+                class="px-8 py-4 text-lg font-bold text-white rounded-lg shadow-lg transition-all duration-300 bg-accent-400 hover:scale-105 hover:bg-accent-600">
                 Explore Recipes
             </a>
             <a href="{% url 'recipes:recipe-search' %}"
-                class="px-8 py-4 text-lg font-bold text-white bg-transparent rounded-lg border border-white border-solid shadow-lg transition-all duration-300 hover:bg-accent-50 hover:scale-105 hover:bg-accent-600 hover:border-accent-600">
+                class="px-8 py-4 text-lg font-bold text-white bg-transparent rounded-lg border border-white border-solid shadow-lg transition-all duration-300 hover:scale-105 hover:bg-accent-600 hover:border-accent-600">
                 Search & Analyze
             </a>
         </div>
