docs: Clarifies search ingredient matching behavior
Updates the search tips to more accurately reflect that
multiple ingredients require ALL to be present in recipes.

--- a/src/recipes/templates/recipes/search.html
+++ b/src/recipes/templates/recipes/search.html
@@ -127,7 +127,7 @@
                 <li class="{% search_tip_classes %}"><strong>Wildcard ?:</strong><br> "pasta?"
                     finds "pasta" but not "pastas"</li>
                 <li class="{% search_tip_classes %}"><strong>Multiple ingredients:</strong><br>
-                    Enter "tomato*, cheese" to find recipes with both</li>
+                    Enter "tomato*, cheese" to find recipes containing ALL specified ingredients</li>
                 <li class="{% search_tip_classes %}"><strong>Time filtering:</strong><br> Enter 10
                     to find recipes taking 10 minutes or less</li>
                 <li class="{% search_tip_classes %}"><strong>Show all:</strong><br> Leave fields
