--- a/src/staticfiles/css/output_dv2i8GU.css
+++ b/src/staticfiles/css/output_dv2i8GU.css
@@ -1311,11 +1311,6 @@ video {
   border-color: rgb(254 240 138 / var(--tw-border-opacity, 1));
 }
 
-.border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
-}
-
 .bg-accent-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(244 127 33 / var(--tw-bg-opacity, 1));
@@ -1373,11 +1368,6 @@ video {
   background-color: rgb(254 252 232 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
-}
-
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
 }
@@ -1409,10 +1399,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-}
-
-.p-2\.5 {
-  padding: 0.625rem;
 }
 
 .px-2 {
@@ -3626,6 +3612,26 @@ video {
 
 /* Additional custom styles if needed */
 
+/* Login form styles */
+
+.login-form input[type='text'],
+.login-form input[type='password'] {
+  padding: 0.5rem 0.75rem;
+  width: 100%;
+  border-radius: 0.375rem;
+  border: 1px solid #F8B27A;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  transition: colors 200ms;
+  color: #E36F10;
+}
+
+.login-form input[type='text']:focus,
+.login-form input[type='password']:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #FDE5D3;
+  border-color: #F8B27A;
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -3681,11 +3687,6 @@ video {
   border-color: rgb(248 178 122 / var(--tw-border-opacity, 1));
 }
 
-.focus\:border-blue-500:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -3700,11 +3701,6 @@ video {
 .focus\:ring-accent-100:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(253 229 211 / var(--tw-ring-opacity, 1));
-}
-
-.focus\:ring-blue-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1));
 }
 
 @media (min-width: 640px) {
