--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -1,7 +1,12 @@
 <!-- htmlhint doctype-first:false -->
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
+{% load recipe_extras %}
 
 {% block title %}Recipe List - Recipe App{% endblock %}
+
+{% block extra_css %}
+{% endblock %}
 
 {% block content %}
 <div class="flex overflow-hidden fixed inset-0 justify-center items-center">
@@ -20,7 +25,7 @@
         {% if error_message %}
         <p class="mb-8 text-xl bg-red-500 opacity-90 md:text-2xl">{{error_message}}</p>
         {% endif %}
-        <form action="" method="POST" class="space-y-6">
+        <form action="" method="POST" class="space-y-6 login-form">
             {% comment %} add Django security token {% endcomment %}
             {% csrf_token %}
 
@@ -38,7 +43,7 @@
                     <label for="{{ field.id_for_label }}" class="form-label">
                         {{ field.label }}
                     </label>
-                    {{ field }}
+                    {{ field|tailwind_input }}
                     {% if field.errors %}
                     <div class="errorlist field-errors">
                         {{ field.errors }}
