feat: Enhances UI and improves user experience
Improves the overall user interface by adding styling, improving the layout, and providing better feedback to the user.

This includes adding a "no results" message to the search page, adjusting spacing, and improving the appearance of elements.

--- a/src/recipes/templates/recipes/home.html
+++ b/src/recipes/templates/recipes/home.html
@@ -29,7 +29,7 @@
             Explore Recipes
         </a> -->
         {% if user.is_authenticated %}
-        <div class="flex flex-col gap-4 justify-center sm:flex-row">
+        <div class="flex flex-col gap-8 justify-center p-4 sm:flex-row">
             <a href="{% url 'recipes:recipe-list' %}"
                 class="px-8 py-4 text-lg font-bold text-white rounded-lg shadow-lg transition-all duration-300 bg-accent-400 hover:scale-105 hover:bg-accent-600">
                 Explore Recipes
