--- a/src/recipes/templates/recipes/search.html
+++ b/src/recipes/templates/recipes/search.html
@@ -40,7 +40,7 @@
     <h1 class="mt-12 mb-8 font-serif text-2xl font-bold text-accent-600 text-primary-400">
         Search Recipes & Analyze Data
     </h1>
-    <div class="grid grid-cols-1 lg:grid-cols-[80%_20%]">
+    <div class="grid grid-cols-1 lg:grid-cols-[80%_20%] lg:grid-rows-[auto_auto]">
         <!-- Search Form -->
         <div class="p-4 pb-12 mb-8 rounded-lg shadow-lg md:p-8 bg-alternate_a-100/50">
             <h2 class="mb-4 text-xl font-semibold text-accent-600">Search Criteria</h2>
@@ -116,10 +116,20 @@
                 </div>
             </form>
         </div>
+        <!-- No Results Message -->
+        {% if not recipes and request.method == "POST" or not recipes and "search_form_data" in request.session %}
+        <div class="p-10 mt-8 mb-12 bg-yellow-100 rounded-lg border border-yellow-200 lg:row-start-2 lg:mb-0"
+            id="no-recipes-found">
+            <h3 class="mb-2 text-xl font-semibold text-yellow-800">No Recipes Found</h3>
+            <p class="text-lg text-yellow-700">Try adjusting your search criteria or <a
+                    href="{% url 'recipes:recipe-list' %}" class="text-accent-600 hover:underline">view all recipes</a>.
+            </p>
+        </div>
+        {% endif %}
         <!-- Instructions -->
-        <div class="text-xs lg:pl-6">
-            <h3 class="mb-2 text-base font-semibold text-gray-500">Search Tips</h3>
-            <ul class="grid grid-cols-1 gap-y-0 gap-2 space-y-3 list-none text-gray-500 sm:grid-cols-3 lg:grid-cols-1">
+        <div class="text-xs text-gray-500/75 lg:pl-6">
+            <h3 class="mb-2 text-sm font-semibold">Search Tips</h3>
+            <ul class="grid grid-cols-1 gap-y-0 gap-2 space-y-3 list-none sm:grid-cols-3 lg:grid-cols-1">
                 <li class="{% search_tip_classes %}"><strong>Partial matching:</strong><br>
                     "pasta" will find
                     "Pasta al Pesto"</li>
@@ -236,15 +246,6 @@
                     class="mx-auto max-w-full h-auto">
             </div>
         </div>
-    </div>
-    {% endif %}
-
-    <!-- No Results Message -->
-    {% if not recipes and request.method == "POST" or not recipes and "search_form_data" in request.session %}
-    <div class="p-6 mb-8 bg-yellow-50 rounded-lg border border-yellow-200" id="no-recipes-found">
-        <h3 class="mb-2 text-lg font-semibold text-yellow-800">No Recipes Found</h3>
-        <p class="text-yellow-700">Try adjusting your search criteria or <a href="{% url 'recipes:recipe-list' %}"
-                class="text-accent-600 hover:underline">view all recipes</a>.</p>
     </div>
     {% endif %}
 </div>
