--- a/src/recipes/templates/recipes/search.html
+++ b/src/recipes/templates/recipes/search.html
@@ -2,7 +2,7 @@
 {% load recipe_extras %}
 
 
-{% block title %}Recipe Search - Recipe App{% endblock %}
+{% block title %}Recipe Search - Nomalyze{% endblock %}
 
 {% block extra_css %}
 <style>
