--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %}
 {% load recipe_extras %}
 
-{% block title %}Recipe List - Recipe App{% endblock %}
+{% block title %}Login - Nomalyze{% endblock %}
 
 {% block extra_css %}
 {% endblock %}
@@ -20,7 +20,7 @@
     <div
         class="relative z-10 p-8 mx-8 w-full max-w-lg text-center text-white bg-opacity-70 rounded-lg bg-alternate_a-800">
         <h1 class="mb-6 font-serif text-3xl font-bold md:text-4xl lg:text-2xl text-accent-400">
-            Login to Recipe App
+            Login to Nomalyze
         </h1>
         {% if error_message %}
         <p class="mb-8 text-xl bg-red-500 opacity-90 md:text-2xl">{{error_message}}</p>
