--- a/src/templates/auth/logout.html
+++ b/src/templates/auth/logout.html
@@ -1,7 +1,7 @@
 <!-- htmlhint doctype-first:false -->
 {% extends 'base.html' %}
 
-{% block title %}Logged Out - Recipe App{% endblock %}
+{% block title %}Logged Out - Nomalyze{% endblock %}
 
 {% block content %}
 <div class="flex overflow-hidden fixed inset-0 justify-center items-center">
@@ -27,7 +27,7 @@
                 </svg>
             </div> -->
             <p class="text-lg md:text-xl">
-                Thank you for using our recipe app. You can log back in anytime.
+                Thank you for using Nomalyze. You can log back in anytime.
             </p>
         </div>
 
