--- a/src/recipes/templates/recipes/list.html
+++ b/src/recipes/templates/recipes/list.html
@@ -1,7 +1,7 @@
 <!-- htmlhint doctype-first:false -->
 {% extends 'base.html' %}
 
-{% block title %}Recipe List - Recipe App{% endblock %}
+{% block title %}Recipe List - Nomalyze{% endblock %}
 
 {% block content %}
 <div class="container px-6 pt-20 pb-20 mx-auto mb-12">
